# linux-terminal-service-manager

./: AUTHORS  CMakeLists.txt  README.md  README_ru.md  astylerc  sonar-project.properties
doc/: astylerc  (+1 more)
src/: CMakeLists.txt
src/audio/: ltsm_audio.h  ltsm_audio_client.cpp  ltsm_audio_decoder.cpp  ltsm_audio_encoder.h  ltsm_audio_pulse.cpp  ltsm_audio_pulse.h  ltsm_audio_session.cpp  ltsm_audio_session.h
src/channels/: CMakeLists.txt  channel_system.cpp  channel_system.h  ltsm_audio.h  ltsm_channels.h  ltsm_fuse.h  ltsm_pcsc.h  ltsm_pkcs11.h
src/client/: CMakeLists.txt  ltsm_client.cpp  ltsm_client.h  ltsm_vnc2sdl.cpp  ltsm_vnc2sdl.h
src/client/audio/: CMakeLists.txt  ltsm_audio_client.cpp  ltsm_audio_decoder.cpp  ltsm_audio_decoder.h  ltsm_audio_openal.cpp  ltsm_audio_openal.h  ltsm_pulse_simple.cpp  ltsm_pulse_simple.h
src/client/fuse/: CMakeLists.txt  ltsm_fuse_client.cpp
src/client/pcsc/: CMakeLists.txt  ltsm_pcsc_client.cpp  ltsm_pcsc_winerrors.cpp
src/client/pkcs11/: CMakeLists.txt  ltsm_pkcs11_client.cpp
src/common/: CMakeLists.txt  avast_asio_async_mutex.hpp  ltsm_application.cpp  ltsm_application.h  ltsm_async_mutex.h  ltsm_async_sdbus.h  ltsm_async_socket.h  ltsm_boost_socket.h  ltsm_byte_bufstream.h  ltsm_byte_stream.h  ltsm_byte_streambuf.h  ltsm_compat.h  ltsm_font_psf.h  ltsm_framebuffer.cpp  ltsm_framebuffer.h  ltsm_global.h  ltsm_gsslayer.cpp  ltsm_gsslayer.h  ltsm_json_wrapper.cpp  ltsm_json_wrapper.h  ltsm_ldap_wrapper.cpp  ltsm_ldap_wrapper.h  ltsm_parallels_jobs.h  ltsm_pkcs11_wrapper.cpp  ltsm_pkcs11_wrapper.h  ltsm_sdbus_proxy.h  ltsm_sdl_wrapper.cpp  ltsm_sdl_wrapper.h  ltsm_sockets.cpp  ltsm_sockets.h  ltsm_streambuf.cpp  ltsm_streambuf.h  ltsm_tools.cpp  ltsm_tools.h  ltsm_xcb_types.cpp  ltsm_xcb_types.h  ltsm_xcb_wrapper.cpp  ltsm_xcb_wrapper.h  ltsm_zlib.cpp  ltsm_zlib.h
src/common/libxcb-errors/: extensions.c
src/connector/: CMakeLists.txt  ltsm_connector.cpp  ltsm_connector.h  ltsm_connector_proto.cpp  ltsm_connector_proto.h  ltsm_connector_rdp.cpp  ltsm_connector_rdp.h  ltsm_connector_spice.cpp  ltsm_connector_spice.h  ltsm_connector_vnc.cpp  ltsm_connector_vnc.h  ltsm_framebuffer.cpp  ltsm_framebuffer.h  ltsm_render_primitives.cpp  ltsm_render_primitives.h  ltsm_sockets.cpp  ltsm_sockets.h  ltsm_vnc_encodings.cpp  ltsm_vnc_zlib.cpp  ltsm_vnc_zlib.h
src/cups_backend/: CMakeLists.txt  main.cpp
src/dbus/: CMakeLists.txt  ltsm_audio.xml  ltsm_display.xml  ltsm_fuse.xml  ltsm_pcsc.xml  ltsm_service.xml
src/dbus-glue/: audio.xml  bindings.xml  fuse.xml  generated.sh  ltsm_audio_adaptor.h  ltsm_audio_proxy.h  ltsm_dbus_adaptor.h  ltsm_dbus_proxy.h  ltsm_fuse_adaptor.h  ltsm_fuse_proxy.h  ltsm_service_adaptor.h  ltsm_service_proxy.h  service.xml
src/fuse/: ltsm_fuse.h  ltsm_fuse_client.cpp  ltsm_fuse_session.cpp  ltsm_fuse_session.h
src/librfb/: CMakeLists.txt  ffmpeg_tools.cpp  ffmpeg_tools.h  librfb_client.cpp  librfb_client.h  librfb_decodings.cpp  librfb_decodings.h  librfb_encoding_ffmpeg.cpp  librfb_encoding_ffmpeg.h  librfb_encodings.cpp  librfb_encodings.h  librfb_extclip.cpp  librfb_extclip.h  librfb_ffmpeg.cpp  librfb_ffmpeg.h  librfb_server.cpp  librfb_server.h  librfb_winclient.cpp  librfb_x11client.cpp  librfb_x11server.cpp  librfb_x11server.h  ltsm_encodings.cpp  ltsm_librfb.cpp  ltsm_librfb.h
src/librfb/client/: CMakeLists.txt  librfb_client.cpp  librfb_client.h  librfb_decodings.cpp  librfb_decodings.h  librfb_winclient.cpp  librfb_winclient.h  librfb_x11client.cpp  librfb_x11client.h
src/librfb/ffmpeg/: CMakeLists.txt  ffmpeg_tools.cpp  ffmpeg_tools.h  librfb_ffmpeg.cpp  librfb_ffmpeg.h
src/librfb/server/: CMakeLists.txt  librfb_encodings.cpp  librfb_encodings.h  librfb_server.cpp  librfb_server.h  librfb_x11server.cpp  librfb_x11server.h  test.cpp
src/qt_helper/: CMakeLists.txt  ltsm_helper.qrc  ltsm_helper_ru.qm  ltsm_helper_ru.ts  ltsm_helperwindow.cpp  ltsm_helperwindow.h  ltsm_helperwindow.ui  ltsm_ldap_wrapper.cpp  ltsm_ldap_wrapper.h  ltsm_openssl_wrapper.cpp  ltsm_openssl_wrapper.h  ltsm_pkcs11_session.cpp  ltsm_pkcs11_session.h  main.cpp
src/qt_sessions/: ltsm_sessions.cpp  ltsm_sessions.h  ltsm_sessions.qrc  ltsm_sessions.ui  ltsm_sessions_ru.qm  main.cpp
src/sane_backend/: unix.c  unix.conf.in  unix.h
src/sdl2x11/: ltsm_sdl2x11.cpp  ltsm_sdl_wrapper.cpp  ltsm_sdl_wrapper.h
src/service/: CMakeLists.txt  alexab_safe_ptr.h  ltsm_service.cpp  ltsm_service.h
src/session_audio/: CMakeLists.txt  ltsm_audio.h  ltsm_audio_client.cpp  ltsm_audio_decoder.h  ltsm_audio_encoder.cpp  ltsm_audio_encoder.h  ltsm_audio_openal.cpp  ltsm_audio_openal.h  ltsm_audio_pipewire.cpp  ltsm_audio_pipewire.h  ltsm_audio_pulse.cpp  ltsm_audio_pulse.h  ltsm_audio_session.cpp  ltsm_audio_session.h
src/session_display/: CMakeLists.txt  ltsm_display_session.cpp  ltsm_display_session.h  ltsm_sdbus_proxy.h
src/session_fuse/: CMakeLists.txt  ltsm_fuse.cpp  ltsm_fuse.h  ltsm_fuse_client.cpp  ltsm_fuse_session.cpp  ltsm_fuse_session.h
src/session_pcsc/: CMakeLists.txt  ltsm_pcsc.h  ltsm_pcsc_client.cpp  ltsm_pcsc_session.cpp  ltsm_pcsc_session.h
src/session_pkcs11/: ltsm_pkcs11_client.cpp  ltsm_pkcs11_session.cpp  ltsm_pkcs11_session.h  ltsm_pkcs11_wrapper.cpp  ltsm_pkcs11_wrapper.h
src/tests/: CMakeLists.txt
src/tests/common/: CMakeLists.txt
src/tests/encodings/: CMakeLists.txt  librfb_server2.cpp  librfb_server2.h  main.cpp
src/tests/framebuf/: CMakeLists.txt  main.cpp
src/tests/framebuf2/: CMakeLists.txt  main.cpp
src/tests/json/: CMakeLists.txt  main.cpp  test.json
src/tests/librfb/: CMakeLists.txt
src/tests/streambuf/: CMakeLists.txt  main.cpp
src/tests/unixsocket/: CMakeLists.txt  main.cpp
src/tests/x11clip/: CMakeLists.txt  main.cpp
src/tests/x11enc/: CMakeLists.txt  main.cpp
src/vnc2image/: ltsm_vnc2image.cpp  ltsm_vnc2image.h  ltsm_vnc_client.cpp  ltsm_vnc_client.h
src/vnc2sdl/: ltsm_vnc2sdl.cpp  ltsm_vnc2sdl.h
src/x11vnc/: ltsm_connector_vnc.cpp  ltsm_connector_vnc.h  ltsm_connector_x11vnc.cpp  ltsm_connector_x11vnc.h  ltsm_vnc_encodings.cpp  ltsm_x11vnc.cpp  ltsm_x11vnc.h
(+78 files in other folders)
